More test coverage (#188)
* Cover AttachName

* Cover BotUtils

* Cover TelegramBot Builder custom apiUrl, fileApiUrl, updateListenerSleep

* Add RetryInterceptor for tests

* Enable test logging

* Fix removeListener in UpdatesListenerTest

* Remove test logging

* Remove sleep from tests